- eqnarray entfernt - autoref - Fehler und Warnungen behoben - Verweis auf Skripte eingefügt
git-svn-id: https://svn.lug-jena.de/uni-skripte@808 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -116,7 +116,6 @@
 \pagestyle{headings}
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
-\newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
 \newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
@@ -160,39 +159,30 @@
 \newcommand*{\indexsection}{\minisec}
 
 % Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
-\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
+%\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
 
 % Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
 % im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
 % Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
 % sondern \Leftrightarrow.
-\newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw\mspace{8mu}}%
-			       {$gdw$\xspace}}
-\newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
-			       {$gdw_{def}$\xspace}}
+% \newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
+% 			       {\mspace{8mu}gdw\mspace{8mu}}%
+% 			       {$gdw$\xspace}}
+% \newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
+% 			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
+% 			       {$gdw_{def}$\xspace}}
 
 % Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
 % rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
 % ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
-\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
-\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
+%\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
+%\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
 % ... und mancheinem gefällt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
-
-% Manchmal möchte man Begriffe erklären oder etwas aufzählen, das aber
-% nicht fett gedruckt werden soll. Dazu diese Umdefinition einer
-% description mit normaler Schrift
-\newenvironment*{mdescription}%
-                {\renewcommand*{\descriptionlabel}[1]%
- 			       {\hspace\labelsep\normalfont ##1}%
-		 \begin{description}}%
-		{\end{description}}
 
 \makeindex
 
@@ -203,16 +193,78 @@
 
 
 \begin{document}
-\title{Elementare Wahrscheinlichkeitstheorie und Mathematische Statistik
-  \thanks{$LastChangedRevision$ vom $LastChangedDate$}}
+\title{Elementare Wahrscheinlichkeitstheorie und Mathematische
+  Statistik}
 \author{Prof.\,Dr.\,Karl-Heinz Fichtner}
 \date{WS 2004/05}
 
+\maketitle
+
+\clearpage
+\chapter*{Vorwort}
+
+{\itshape
+  Dieses Dokument wurde als Skript für die auf der
+  Titelseite genannte Vorlesung erstellt und wird jetzt im Rahmen des
+  Projekts
+  "`\href{http://www.minet.uni-jena.de/~joergs/skripte/}
+  {Vorlesungsskripte der Fakultät für Mathematik}
+  \href{http://www.minet.uni-jena.de/~joergs/skripte/}{und Informatik}"'
+  weiter betreut. Das
+  Dokument wurde nach bestem Wissen und Gewissen angefertigt. Denoch
+  garantiert weder der auf der Titelseite genannte Dozent, die Personen,
+  die an dem Dokument mitgewirkt haben, noch die
+  Mitglieder des Projekts für dessen Fehlerfreiheit. Für etwaige Fehler
+  und dessen Folgen wird von keiner der genannten Personen eine Haftung
+  übernommen. Es steht jeder Person frei, dieses Dokument zu lesen, zu
+  verändern oder auf anderen Medien verfügbar zu machen, solange ein
+  Verweis auf die Internetadresse des Projekts
+  \url{http://www.minet.uni-jena.de/~joergs/skripte/}
+  enthalten ist.
+
+  Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision{} und ist vom
+  \SVNDate{}. Eine neue Ausgabe könnte auf der Webseite des Projekts verfügbar
+  sein.
+
+  Jeder ist dazu aufgerufen Verbesserungen, Erweiterungen und
+  Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder diese
+  selbst einzupflegen -- einfach eine E-Mail an die
+  \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
+  \texttt{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
+  sind unter der oben genannten Internetadresse verfügbar.
+
+  Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
+  haben, vielmals danken:
+  \begin{itemize}
+   \item \href{mailto:jens@kubieziel.de}{Jens Kubieziel
+    \texttt{<jens@kubieziel.de>}} (2004--2007)
+  \end{itemize}
+}
+
+\clearpage
+\pdfbookmark[0]{Inhaltsverzeichnis}{inhaltsverzeichnis}
 \tableofcontents
 
+\clearpage
+\pdfbookmark[0]{Auflistung der Sätze}{theoremlist}
+\chapter*{Auflistung der Theoreme}
+
+\pdfbookmark[1]{Sätze}{satzlist}
+\section*{Sätze}
+\theoremlisttype{optname}
+\listtheorems{satz}
+
+\pdfbookmark[1]{Definitionen und Festlegungen}{definilist}
+\section*{Definitionen und Festlegungen}
+% \theoremlisttype{all}
+\listtheorems{defini,festl}
+
+
 \chapter{Maß- und allgemeine Integrationstheorie}
+\todo{einführende Worte}
 
 \section{Einführung in die Maßtheorie}
+\todo{einführende Worte}
 
 \subsection{Das Grundmodell der Wahrscheinlichkeitsrechnung}
 
@@ -316,8 +368,8 @@ Punkte (1) und (2) gelten und zusätzlich\\
 
 \begin{remark}
   \begin{itemize}
-  \item Die Umkehrung von Satz \ref{satz:s-alg} ist in der Regel
-    falsch, d.h. es gibt Algebren, die keine $\sigma$-Algebra
+  \item Die Umkehrung von \autoref{satz:s-alg} ist in der Regel
+    falsch, d.\,h. es gibt Algebren, die keine $\sigma$-Algebra
     sind. Das klassiche Beispiel hierfür ist: 
     \[\Omega=\N; \CF:=\{A\subseteq\N| A\vee A^c\text{ endlich}\}\]
     Eigenschaften:
@@ -426,7 +478,7 @@ Punkte (1) und (2) gelten und zusätzlich\\
 \end{definition}
 
 \begin{remark}
-  Aus Satz \ref{satz:s-erzeug} folgt $\sigma(\FE)$ ist eine
+  Aus \autoref{satz:s-erzeug} folgt $\sigma(\FE)$ ist eine
   $\sigma$-Algebra. Gleiche Konstruktion ist auch für alle
   Algebren möglich. 
 \end{remark}
@@ -476,7 +528,7 @@ Punkte (1) und (2) gelten und zusätzlich\\
   \item[zu $\FE_6$] $\forall\beta ((-\infty,\beta]^c=(\beta,\infty)
     \in\FE\subseteq\sigma(\FE))\Rightarrow\FE_6=(-\infty,\beta]
     \subseteq\sigma(\FE)\Rightarrow\sigma(\FE_6)\subseteq \sigma(\FE)$
-    Beweis f\"ur $\sigma(\FE)\subseteq\sigma(\FE_6)$ fehlt noch.
+    Beweis für $\sigma(\FE)\subseteq\sigma(\FE_6)$ fehlt noch.
   \end{itemize}
 \end{proof}
 
@@ -504,15 +556,15 @@ $\sigma$-Algebra über $\Omega$.
 
 \begin{beispiel}
   \begin{enumerate}[(1)]
-  \item Nullmaß\index{Nullma\ss} $\CO: \CO(A)=0\,(a\in\CF)$
+  \item Nullmaß\index{Nullmaß} $\CO: \CO(A)=0\,(a\in\CF)$
   \item Dirac-Maße\index{Dirac-Maße}: Sei
     $\omega\in\Omega$. Setzen $\delta_\omega(A)=
     \begin{cases}
       1 & \omega\in A\\
-      0 & \omega\not\in A
+      0 & \omega\notin A
     \end{cases}$
   \item Sei $\Omega$ abzählbar und $\CF=\FP(\Omega)$. Dann ist das
-    Zählmaß\index{Zählma\ss} $\mu(A):=\#(A)$ die Anzahl der
+    Zählmaß\index{Zählmaß} $\mu(A):=\#(A)$ die Anzahl der
     Teilmengen $A$ aus $\Omega$.
   \end{enumerate}
 \end{beispiel}
@@ -571,11 +623,11 @@ $\sigma$-Algebra über $\Omega$.
 
 \begin{remark}
   \begin{enumerate}
-  \item Die Eigenschaften aus Satz \ref{satz:folgenmass} heißt
+  \item Die Eigenschaften aus \autoref{satz:folgenmass} heißt
     \emph{endliche Additivität \index{Additivität!endliche}}.
   \item Die zweite Eigenschaft in der Definition des Maßes heißt
     \emph{$\sigma$-Additivität \index{$\sigma$-Additivität}}.
-  \item Satz \ref{satz:folgenmass} impliziert, dass aus der
+  \item \autoref{satz:folgenmass} impliziert, dass aus der
     $\sigma$-Additivität die endliche Additivität folgt. Die
     Umkehrung ist jedoch falsch.
   \item \index{Subadditivität}Subadditivität: Für alle
@@ -598,7 +650,7 @@ $\sigma$-Algebra über $\Omega$.
   \begin{itemize}
   \item[zu (b) und (c)] $A\subseteq B\Rightarrow B=A\cup(B\setminus
     A) \Rightarrow\mu(B)=\mu(a\cup(B\setminus
-    A)) \overset{\text{\ref{satz:folgenmass}}}{=} \mu(A)+\mu(B\setminus A)$
+    A)) \overset{\text{\autoref{satz:folgenmass}}}{=} \mu(A)+\mu(B\setminus A)$
     Wir haben $\mu(B\setminus A)\geq 0\Rightarrow\mu(A)\leq\mu(B)$
     Durch Umstellen erhält man $\mu(B\setminus A)=\mu(B) -
     \mu(A)$. Hierzu muss $\mu(A)<+\infty$ sein.
@@ -646,7 +698,7 @@ $\sigma$-Algebra über $\Omega$.
     \lim_{n\rightarrow\infty} \mu(A_n^c)$\\
     $\mu(\bigcup_{n=1}^\infty A_n^c)=\mu((\bigcap_{n=1}^\infty
     A_n)^c)= \mu(\Omega\setminus(\bigcap_{n=1}^\infty A_n))
-     \overset{\text{\ref{satz:elemEigen} c}}{=} \mu(\Omega)-\mu(\bigcap A_n)$\\
+     \overset{\text{\autoref{satz:elemEigen} c}}{=} \mu(\Omega)-\mu(\bigcap A_n)$\\
     $\mu(A_n^c)=\mu(\Omega\setminus A_n)=\mu(\Omega)-\mu(A_n)
     \Rightarrow \lim_{n\rightarrow\infty} \mu(A_n)$
   \end{itemize}
@@ -718,7 +770,7 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
   \begin{enumerate}
   \item Die Forderung, dass die $\mu_1,\ldots,\mu_n$ endlich sein
     sollen, kann man abschwächen (siehe hierzu auch Lebesguesches
-    Ma\ss).
+    Maß).
   \item Der Fall $n=+\infty$ ist für Wahrscheinlichkeitsmaße
     interessant. 
   \end{enumerate}
@@ -748,8 +800,8 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
     $\times_{i=1}^n A_i$ offen.
   \item Wir haben $\ell_n(\times_{i=1}^n A_i)=\ell^{n\otimes}
     (\times_{i=1}^n A_i)$ für Mengen $A_i=[a_i,b_i)$. Ferner wissen
-    wir, dass diese Mengen $\FB$ erzeugen (siehe auch Satz
-    \ref{satz:b-erzeugen}). Die allgemeine Theorie führt zur
+    wir, dass diese Mengen $\FB$ erzeugen (siehe auch 
+    \autoref{satz:b-erzeugen}). Die allgemeine Theorie führt zur
     Behauptung des oben stehenden Satzes.
   \end{itemize}
 \end{remark}
@@ -762,14 +814,14 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
   Wir haben $\ell([a,b))=b-a\,(a<b)$. Nun betrachten wir die
   Mengenfolge $B_k:=[x,x+\frac{1}{n})\Rightarrow B_k\supseteq B_{k+1}
   \Rightarrow \bigcap_{k=1}^\infty B_k=\{x\}$. Wegen der Stetigkeit
-  von oben (siehe Satz \ref{satz:stetigkeit}) folgt nun: $\ell(\{x\})=
+  von oben (siehe \autoref{satz:stetigkeit}) folgt nun: $\ell(\{x\})=
   \ell(\bigcap_{k=1}^\infty B_k)=\lim_{k\rightarrow\infty} \ell(B_k) =
   \lim_{k\rightarrow\infty}
   \underbrace{\ell([x,x+\frac{1}{k}))}_{\frac{1}{k}}
   =\lim_{k\rightarrow\infty} \frac{1}{k}=0$
 \end{proof}
 
-\begin{satz}[Folgerung aus \ref{satz:ell}]
+\begin{satz}[Folgerung aus \autoref{satz:ell}]
   Seien $a<b\rightarrow \ell([a,b])=\ell((a,b)) = \ell((a,b]) =
   \ell([a,b)) = b-a$
 \end{satz}
@@ -780,7 +832,7 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
     \ell([a,b)\cup \{b\})= \ell([a+b))+\ell(\{b\})=b-1+0$
   \item $(a,b]=[a,b]\setminus \{a\}$\\
     Es ist klar, dass $\{a\}$ in $[a,b]$ liegt. Damit folgt nach Punkt
-    c des Satzes \ref{satz:elemEigen}: $\ell((a-b]) = \ell([a,b])-
+    c von \autoref{satz:elemEigen}: $\ell((a-b]) = \ell([a,b])-
     \ell(\{a\})= (b-a) - 0 = b-a$
   \item $(a-b)=(a,b]\setminus \{b\}$\\
     Wie schon oben ist klar, dass $\{b\}$ in $(a,b]$ liegt. Nach
@@ -807,7 +859,7 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
 
 \begin{definition}
   Ein Maß $P$ auf einem meßbaren Raum $[\Omega,\CF]$ heißt
-  Wahrscheinlichkeitsmaß\index{Wahrscheinlichkeitsma\ss}, wenn
+  Wahrscheinlichkeitsmaß\index{Wahrscheinlichkeitsmaß}, wenn
   gilt: \[P(\Omega)=1\]
   In diesem Fall heißt $\ofp$
   \index{Wahrscheinlichkeitsraum}Wahrscheinlichkeitsraum.
@@ -857,20 +909,20 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
 \begin{proof}
   \begin{enumerate}[(F1)]
   \item Sei $F(x):=P((-\infty,x))$ mit $x\in\R$. Dann gilt $(-\infty,
-    x)\subseteq (-\infty, y)$, da $x\leq y$. Nach Satz
-    \ref{satz:elemEigen} Punkt b hat man $P((-\infty, x))\leq
+    x)\subseteq (-\infty, y)$, da $x\leq y$. Nach 
+    \autoref{satz:elemEigen} Punkt b hat man $P((-\infty, x))\leq
     P((-\infty, y))\Rightarrow F(x)\leq F(y)$
   \item Seien $x\in\R$ und $x_n\leq x_{n+1}, \lim x_n=x$. Damit folgt:
     $(-\infty, x_n)\subseteq (-\infty, x_{n+1})$ und $(-\infty, x)=
-    \bigcup_{n=1}^\infty (-\infty, x_n)$. Unter Zuhilfenahme von Satz
-    \ref{satz:stetigkeit} a erhält man $F(x)=P((-\infty,
+    \bigcup_{n=1}^\infty (-\infty, x_n)$. Unter Zuhilfenahme von 
+    \autoref{satz:stetigkeit} a erhält man $F(x)=P((-\infty,
     x))=P(\bigcup_{n=1}^\infty(-\infty, x_n))=\lim P((-\infty, x_n))=
     \lim F(x_n)$
   \item Sei $x_n \uparrow +\infty$\footnote{d.\,h. $x_n\subseteq
       x_{n+1}, x_n\xrightarrow{n\rightarrow\infty}+\infty$}. Damit
     gilt wieder die schon oben angeführte Teilmengenbeziehung und es
     folgt: $\bigcup_{n=1}^\infty (-\infty, x_n)=\R$. Wie bereits oben
-    erhält man nun durch den Satz \ref{satz:stetigkeit} a, dass
+    erhält man nun durch den \autoref{satz:stetigkeit} a, dass
     $1=P(\R)=P(\bigcup_{n=1}^\infty (-\infty, x_n))=\lim P((-\infty,
     x_n))$
   \item Sei nun $x_n\downarrow -\infty\Rightarrow (-\infty,
@@ -881,7 +933,7 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
 \end{proof}
 
 \begin{satz*}
-  Sei $F:\R\rightarrow[0,1]$ mit den Eigenschaften (F1) bis (F4). Dann
+  Sei $F\colon\R\rightarrow[0,1]$ mit den Eigenschaften (F1) bis (F4). Dann
   existiert genau ein Wahrscheinlichkeitsmaß $P$ auf $[\R^n, \FB_n]$
   mit $F(x)=P((-\infty, x))$. Dies bedeutet, dass $F$ die
   Verteilungsfunktion von $P$ ist.
@@ -933,17 +985,17 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
 \begin{remark}
   Die Gleichverteilung ist ein Wahrscheinlichkeitsmaß auf
   $[\R^n,\FB_n]$. Denn es gilt:
-  \begin{eqnarray*}
-    Gl_A(\emptyset)&=& \frac{\ell^{(n)}(A\cap \emptyset)}{\ell^{(n)}
+  \begin{align*}
+    Gl_A(\emptyset)&= \frac{\ell^{(n)}(A\cap \emptyset)}{\ell^{(n)}
       (A)} =0\\
-    Gl_A(\R^n)&=& \frac{\ell^{(n)}(A\cap \R)}{\ell^{(n)} (A)}=
+    Gl_A(\R^n)&= \frac{\ell^{(n)}(A\cap \R)}{\ell^{(n)} (A)}=
     \frac{\ell^{(n)}(A)}{\ell^{(n)} (A)} =1\\
-    Gl_A\left(\bigcup_k B_K\right)&=& \frac{\ell^{(n)}((\bigcup
+    Gl_A\left(\bigcup_k B_K\right)&= \frac{\ell^{(n)}((\bigcup
       B_k)\cap A)}{\ell^{(n)} (A)}= \frac{\ell^{(n)}(\bigcup (B\cap
       A)}{\ell^{(n)} (A)}= \frac{\sum_k\ell^{(n)} (B_k\cap
       A)}{\ell^{(n)} (A)}\\
-    &=&\qquad \sum_k Gl_A(B_k)
-  \end{eqnarray*}
+    &=\qquad \sum_k Gl_A(B_k)
+  \end{align*}
 \end{remark}
 
 \begin{satz}
@@ -972,12 +1024,12 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
 \begin{proof}
   \begin{enumerate}[zu (1)]
   \item $(-\infty, b)\setminus (-\infty, a)= [a,b)$ und $(-\infty,
-    a)\subseteq (-\infty, b)$. Nach Satz \ref{satz:elemEigen}~c ist
+    a)\subseteq (-\infty, b)$. Nach \autoref{satz:elemEigen}~c ist
     $P([a,b))= P((-\infty, b))\setminus (-\infty, a))=P((-\infty,
     b))- P((-\infty, a))= F(b)-F(a)$
   \item $\{a\}=\bigcap_{n\geq 1} [a,a+\frac{1}{n})$ und
-    $[a,a+\frac{1}{n}) \supseteq [a,a+\frac{1}{n+1})$. Wegen Satz
-    \ref{satz:stetigkeit} ist $P(\{a\})=p(\bigcap_{n\geq 1}
+    $[a,a+\frac{1}{n}) \supseteq [a,a+\frac{1}{n+1})$. Wegen
+    \autoref{satz:stetigkeit} ist $P(\{a\})=p(\bigcap_{n\geq 1}
     [a,a+\frac{1}{n})) = \lim
     P([a,a+\frac{1}{n}))=\lim_{n\rightarrow\infty} F(a+\frac{1}{n})
       -F(a) =F(a+0)-F(a)$
@@ -995,7 +1047,7 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
 \end{satz}
 \begin{proof}
   Es ist klar, dass $P$ ein Maß auf $[\R,\FB]$ ist (Folgerung aus
-  Satz~\ref{satz:massfamilie-131}). Nun verbleibt zu zeigen, dass
+  \autoref{satz:massfamilie-131}). Nun verbleibt zu zeigen, dass
   $P(\R)=1$. Dies ist genau dann der Fall, wenn gilt $\sum \alpha_i
   =1$:
   $P(\R)=\sum_{i\in } \alpha_i P_i(\R)=\sum_{i\in I} \alpha_i=1$. Nach
@@ -1113,7 +1165,7 @@ Abbildungen.\footnote{Falls es eine inverse Abbildung gibt, gilt
   \begin{enumerate}
   \item $f(\omega)=c\in X:\fmineins(A)=
     \begin{cases}
-      \emptyset & c\not\in A\\
+      \emptyset & c\notin A\\
       \Omega & c\in A
     \end{cases}$ Da nun die leere Menge und auch $\CF$ Element von
     $\Omega$ sind, gilt $\fmineins(A)\in\CF$. Damit ist die Funktion
@@ -1165,7 +1217,7 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
 \end{satz}
 \begin{proof}
   Die ist eine Beweisidee für (1). Die weiteren Beweise sind analog zu
-  führen: Nach dem Satz \ref{satz:b-erzeugen} wissen wir, dass die
+  führen: Nach dem \autoref{satz:b-erzeugen} wissen wir, dass die
   Menge $\{(-\infty,x)|x\in\Q\}$ ein durchschnittsabgeschlossenes
   Erzeugendensystem für $\FB$ ist. Wenn $\FE$ ein solches
   Systemmit $\fmineins(B)\in\CF$ ist, dass ist $f$ messbar. Es gilt:
@@ -1198,7 +1250,7 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
   \FB_2$. Damit ist $h$ messbar.\\
   Wir setzen nun $a(x_1,x_2)=x_1+x_2, b(x_1,x_2)=x_1x_2$. Also ist
   $f+g=a\circ h$ und $fg=b\circ h$. Da $a,b$ stetig sind, sind sie
-  auch messbar und nach Satz \ref{satz:verkn-messbar212} ist die
+  auch messbar und nach \autoref{satz:verkn-messbar212} ist die
   Verknüpfung beider Abbildungen wieder messbar.
 \end{proof}
 
@@ -1213,17 +1265,17 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
 \begin{proof}
   \begin{enumerate}[1. F{a}ll]
   \item Sei $f:\sup f_i$. Dann ist $f$ eine Abbildungen von $\Omega$
-    nach $\R$. Wegen des Satz \ref{satz:messb-eigensch213} genügt es
+    nach $\R$. Wegen des \autoref{satz:messb-eigensch213} genügt es
     zu zeigen, dass $\{\omega\in\Omega|f(\omega)\leq x\}\in\CF$. Dazu
     $f(\omega)\leq x\Leftrightarrow f_i(\omega)\leq x\Rightarrow
     \{\omega\in\Omega| f(\omega)\leq x\}=\bigcap_{i\in I}
     \{\underbrace{\omega\in\Omega|f_i(\omega)\leq x}_{\fmineins_i
       ((-\infty, x))\in\CF}$. Damit folgt, dass $f_i$ messbar
-    ist. Nach Satz \ref{satz:s-alg-abg-123} ist es gegenüber
-    Vereinigung abgeschlossen und es folgt somit: $\{\omega\in\Omega :
+    ist. Nach \autoref{satz:s-alg-abg-123} ist es gegenüber
+    Vereinigung abgeschlossen und es folgt somit: $\{\omega\in\Omega\colon
     f(x)\leq x\}=\bigcap_{i\in I} \fmineins_i ((-\infty,x))\in\CF$
-  \item $f:=\inf f_1\Rightarrow f:\Omega\rightarrow\R$. Wegen Satz
-    \ref{satz:messb-eigensch213} (4) genügt es zu zeigen, dass
+  \item $f:=\inf f_1\Rightarrow f:\Omega\rightarrow\R$. Wegen
+    \autoref{satz:messb-eigensch213} (4) genügt es zu zeigen, dass
     $\{\omega\in\Omega | f(\omega)\geq x\}\in\CF$. Dazu $f(\omega)\geq
     x\Leftrightarrow f_i(\omega)\geq x (i\in I)\Rightarrow
     \{\omega\in\Omega | f(\omega)\geq x\}=\bigcup_{i\in I}
@@ -1244,7 +1296,7 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
 \begin{proof}
   \begin{enumerate}[zu (1)]
   \item Wir wissen, dass "`konstante"' Funktionen immer messbar
-    sind. Damit wie auch nach Satz \ref{satz:verkn-messbar-fkt-214}
+    sind. Damit wie auch nach \autoref{satz:verkn-messbar-fkt-214}
     gilt die Behauptung.
   \item Wir setzen $f_1=f, f_2=0$. Beide Funktionen sind messbar und
     wegen des obigen Satzes ist auch $\sup f_i=f^+$ messbar.
@@ -1272,9 +1324,9 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
   Es ist $\chi_A^{-1}(B)$ zu prüfen:
   \[\chi_A^{-1}(B)=
   \begin{cases}
-    \emptyset & 0,1 \not\in B\\
-    A & 1\in B \wedge 0 \not\in B\\
-    A^c & 1\not\in B\wedge 0\in B\\
+    \emptyset & 0,1 \notin B\\
+    A & 1\in B \wedge 0 \notin B\\
+    A^c & 1\notin B\wedge 0\in B\\
     \Omega & 1\in B\wedge 0\in B
   \end{cases}\]
   Wegen $\emptyset, \Omega\in\CF$ erhalten wir: $\chi_A^{-1}(B)\in\CF
@@ -1430,7 +1482,7 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f:
 \end{remark}
 
 \begin{definition}[2. Stufe]
-  Sei $f\geq 0$ und messbar. Nach Satz~\ref{satz:limfolge-2110}
+  Sei $f\geq 0$ und messbar. Nach \autoref{satz:limfolge-2110}
   existieren $(f_n)_{n=1}^\infty, 0\leq f_n\leq f_{n+1}, f=\lim f_n,
   f_n$ einfach. Wir setzen:
   \[\int fd\mu := \limn\int f_nd\mu\]
@@ -1556,7 +1608,7 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f:
 \begin{satz}[Riemannintegral\index{Riemannintegral} stetiger
   Funktionen]
 \label{satz:riemann-222}
-  Seien $f:\R\rightarrow\R$ stetig und $a<b$. Dann ist $f\chi_{[a,b]}$
+  Seien $f\colon\R\rightarrow\R$ stetig und $a<b$. Dann ist $f\chi_{[a,b]}$
   bezüglich $\ell$ integrierbar und es gilt:
   \[\int f\chi_{[a,b]}d\ell=\int_a^b f(x)dx\]
 \end{satz}
@@ -1594,7 +1646,7 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f:
     \rput[t](4.5,0){$b$}
   \end{pspicture}
 
-  \[z_{k+1}^{(n)}-z_k^{(n)}=\frac{b-a}{2^n} f_n(x)=0\quad (x\not\in[a,b])\]
+  \[z_{k+1}^{(n)}-z_k^{(n)}=\frac{b-a}{2^n} f_n(x)=0\quad (x\notin[a,b])\]
   %Formeln noch weiter ergänzen
   \[\Rightarrow \int
   f_nd\ell=\int\sum_{k=0}^{2^{n-1}}a_k\chi_{[z_k,z_{k+1}]} d\ell=
@@ -1665,7 +1717,7 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f:
   \end{enumerate}
   Die Behauptung, dass $f\circ h$ $\mu$-integrierbar ist, folgt sofort
   aus der $\mu\circ\hmineins$-Integrierbarkeit von $f$ und der
-  Gleichung (\ref{eq:uesatz}) im bewiesenen Fall nichtnegativer
+  Gleichung (\autoref{eq:uesatz}) im bewiesenen Fall nichtnegativer
   Funktionen.
 \end{proof}
 
@@ -1787,7 +1839,7 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f:
   \item["`$\Rightarrow$"'] Angenommen $\neg f=_\mu g$,
     d.\,h. $\mu(\{\omega\in\Omega|f(\omega)\neq g(\omega)\})=0
     \Rightarrow \mu(\{\omega\in\Omega|f(\omega)>g(\omega)\})>0\vee
-    \mu(\{\omega\in\Omega|f(\omega)<g(\omega)\})<0$. O.B.d.A. gelte
+    \mu(\{\omega\in\Omega|f(\omega)<g(\omega)\})<0$. o.\,B.\,d.\,A.  gelte
     die erste Gleichung und sei $A_n:=\{\omega\in\Omega|f(\omega)\geq
     g(\omega)+\frac{1}{n}\}\Rightarrow A_n\subseteq A_{n+1}$. Wegen
     der Stetigkeit von unten folgt: $\lim \mu(A_n)=\mu(\bigcup A_n)=
@@ -1818,16 +1870,16 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f:
   Wahrscheinlichkeitsmaß ist und ob dies mit $P$ zusammen fällt.
   \begin{enumerate}
   \item Dazu $\nu(\R)=\int_\R F'(x)\ell(dx)$. Da $F$ stetig ist und
-    Satz \ref{satz:riemann-222} gilt: $\int_{-\infty}^\infty F'(x)dx=
+    \autoref{satz:riemann-222} gilt: $\int_{-\infty}^\infty F'(x)dx=
     \lim_{a\rightarrow-\infty} \lim_{b\rightarrow\infty} \int_a^b
     F'(x) dx=\lim_{a\rightarrow-\infty} \lim_{b\rightarrow\infty}
-    (F(b)- F(a))$. Wegen des Satz \ref{satz:eigensch-vert-152} Punkt 3
+    (F(b)- F(a))$. Wegen des \autoref{satz:eigensch-vert-152} Punkt 3
     und 4 gilt $1-0\cdot 1$. Weiterhin ist zu zeigen, dass
     $P=\nu$. Hier genügt es zu zeigen, dass beide die gleiche
     Verteilungsfunktion haben: Die Verteilungsfunktion $F$ von $P$ ist
     gleich der Verteilungsfunktion $G$ von $\nu$. Wir haben $G(x)=\nu
     ((-\infty,x))=\int_{(-\infty,x)} F'(x)\ell(dy)$. Wiederum nach
-    Satz \ref{satz:riemann-222} ist $\int_{-\infty}^x F'(y)dy=
+    \autoref{satz:riemann-222} ist $\int_{-\infty}^x F'(y)dy=
     \lim_{a\rightarrow-\infty} (F(x)-F(a))=F(x)$
   \end{enumerate}
 \end{proof}
@@ -1891,7 +1943,7 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f:
   Spezialfälle:
   \begin{itemize}
   \item Alle Wahrscheinlichkeitsmaße und alle endlichen Maße
-  \item Lebesguesche Maße (jede Dimension); Wähle z.B. $A_k=[k,k+1)\,
+  \item Lebesguesche Maße (jede Dimension); Wähle z.\,B. $A_k=[k,k+1)\,
     (k\in\Z)\Rightarrow \bigcup A_k\R,A_k\cap A_j=\emptyset,
     \ell(A_k)=1$
   \item Zählmaß auf abzählbaren Mengen $\Omega$, Wähle
@@ -2377,7 +2429,7 @@ Wahrscheinlichkeitsraum ist.
   \[P(B|A)= \frac{P(A|B)\cdot P(B)}{P(A|B)P(B)+P(A|B^c)P(B^c)}\]
 \end{satz}
 \begin{proof}
-  Aus Satz \ref{satz:totalWahr} folgt $P(A)= \sum_{j\in I} P(A|B_j)
+  Aus \autoref{satz:totalWahr} folgt $P(A)= \sum_{j\in I} P(A|B_j)
   P(B_j)$. Weiter folgt aus der Definition der bedingten
   Wahrscheinlichkeit: $P(A|B_i)P(B_i)= \frac{P(A\cap B_i)}{P(B_i)}
   \cdot P(B_i)=P(A\cap B_i)$. Aus beiden schließlich ergibt sich:
@@ -2388,12 +2440,12 @@ Wahrscheinlichkeitsraum ist.
 \begin{beispiel}
   In einem BSE-Schnelltest werden 100~Millionen Kühe getestet. Davon
   sind 100 Kühe an BSE erkrankt und bei nahezu allen ist der Test auch
-  positiv. Aber bei 0,001~\% der gesunden Kühe schlägt der Test auch
+  positiv. Aber bei 0,001\,\% der gesunden Kühe schlägt der Test auch
   an. Wir betrachten folgende Ereignisse:
   \begin{itemize}
   \item $A=$ "`Test positiv"' $\Rightarrow A^c=$ "`Test negativ"'
   \item $B=$ "`Kuh hat BSE"' $\Rightarrow B^c=$ "`Kuh hat kein BSE"'
-  \item "`Testzuverlässigkeit"': $P(A|B)\approx 1-10^{-3}=99,9 \%$
+  \item "`Testzuverlässigkeit"': $P(A|B)\approx 1-10^{-3}=99,9$\,\%
     Dies entspricht der Wahrscheinlichkeit, dass der Test bei einer
     BSE-Kuh auch BSE anzeigt.
   \end{itemize}
@@ -2450,7 +2502,7 @@ Im folgenden gilt immer: $\Omega=\R_+ =(0, +\infty), \CF=\FB\cap\R_+ =
   \end{enumerate}
 \end{proof}
 
-\begin{beispiel}[Interpretation zu \ref{satz:lebensd}]
+\begin{beispiel}[Interpretation zu \autoref{satz:lebensd}]
   \begin{enumerate}[F{a}ll a)]
   \item Der Wert $\{i\}$ bedeutet, dass das Sterbealter $i$ ist und
     $\{i, i+1, \ldots\}$ heißt, dass mindestens das Alter $i$ erreicht
@@ -2547,7 +2599,7 @@ Wahrscheinlichkeitsraum ist.
 \end{remark}
 
 \begin{beispiel}
-  Sei $A\in\CF, P(A)\not\in\{0,1\}$. Setzen $A_1=A_2=A, A_3=\emptyset
+  Sei $A\in\CF, P(A)\notin\{0,1\}$. Setzen $A_1=A_2=A, A_3=\emptyset
   \Rightarrow P(A_1\cap A_2\cap A_3)= P(A_1)P(A_2)P(A_3)=0$. Aber
   $P(A_1\cap A_2)=P(A)\neq (P(A))^2=P(A_1)\cdot P(A_2)$
 \end{beispiel}
@@ -2560,7 +2612,7 @@ Wahrscheinlichkeitsraum ist.
 \begin{proof}
   Nach der obigen Bemerkung 5 genügt es,  für den Fall $\FA= \{A_1,
   \ldots, A_n\}$ die Unabhängigkeit zu zeigen. Dies ist jedoch nach
-  der Bemerkung 4 und Satz \ref{satz:b-unabh} klar.
+  der Bemerkung 4 und \autoref{satz:b-unabh} klar.
 \end{proof}
 
 \begin{satz}
@@ -2598,9 +2650,9 @@ Wahrscheinlichkeitsraum ist.
 \end{beispiel}
 
 \begin{remark}
-  Ohne die Forderung nach Unabhängigkeit gilt die Aussage in Satz
-  \ref{satz:unendlEreignisse} im Allgemeinen nicht. Denn wähle
-  beispielsweise $A_i=A$ und sei $P(A)\not\in\{0,1\}$. Dann ist die
+  Ohne die Forderung nach Unabhängigkeit gilt die Aussage in
+  \autoref{satz:unendlEreignisse} im Allgemeinen nicht. Denn wähle
+  beispielsweise $A_i=A$ und sei $P(A)\notin\{0,1\}$. Dann ist die
   Summe aller $A_i=+\infty$, aber $P(\bigcup_{n=1}^\infty
   \bigcap_{i\geq n})=P(A)$ ist ungleich eins.
 \end{remark}
@@ -2752,7 +2804,7 @@ in $[X_i, \FX_i]$ ist.
 \end{satz}
 \begin{proof}
   Da die $A_i$ in $\CF$ liegen, folgt wegen des
-  Satz~\ref{satz:indimess-218}, dass auch die $\chiai$ messbar 
+ \autoref{satz:indimess-218}, dass auch die $\chiai$ messbar 
   und somit Zufallsgrößen sind.
   \begin{itemize}
   \item["`$\Leftarrow$"'] Es sei vorausgesetzt, dass die
@@ -2767,13 +2819,13 @@ in $[X_i, \FX_i]$ ist.
     leere und die gesamte Menge müssen nicht betrachtet werden, da
     beide unabhängig sind. Somit genügt es zu zeigen, dass die
     $(c_i)_{i\in I}$ in den Fällen $c_i=A_i$ oder $c_i=A_i^c$
-    unabhängig sind. Dem Satz~\ref{satz:vollun-432} folgend gilt
+    unabhängig sind. Dem \autoref{satz:vollun-432} folgend gilt
     hierfür die Behauptung.
   \end{itemize}
 \end{proof}
 
 \begin{remark}
-  Wegen dem Satz~\ref{satz:chiiunab-521} werden folgend nur endliche
+  Wegen dem \autoref{satz:chiiunab-521} werden folgend nur endliche
   Folgen $\xi_1,\ldots, \xi_n$ von Zufallsvariablen betrachtet.
   \begin{itemize}
   \item Schreibweise: $\overline{\xi}(\omega):= [\xi_1(\omega),
@@ -2814,7 +2866,7 @@ in $[X_i, \FX_i]$ ist.
     heißt, für $\{i_1, \ldots, i_k\}\subseteq\{i_1, \ldots, i_n\}$
     muss $P(\bigcap_{j=1}^k \xi_{ij}^{-1}(B_{ij}))= \prod_{j=1}^k
     P(\xi_{ij}^{-1}(B_{ij}))$ gelten. Wir setzen, $A_j:= \R$ mit
-    $j\not\in\{i_1, \ldots, i_k\}$ und $A_{ij}:=B_{ij}$ mit $j=1,
+    $j\notin\{i_1, \ldots, i_k\}$ und $A_{ij}:=B_{ij}$ mit $j=1,
     \ldots, k$.
     \begin{align}
       \label{eq:5231}
@@ -2833,7 +2885,7 @@ in $[X_i, \FX_i]$ ist.
     \begin{align*}
       P_{\xi_i}(A_i)&= P(\xi_i^{-1}(A_i))=
       \begin{cases}
-        1 & i\not\in\{i_1, \ldots, i_k\}\\
+        1 & i\notin\{i_1, \ldots, i_k\}\\
         P(\xi_i^{-1}(B_i)) & i\in \{i_1, \ldots, i_k\}
       \end{cases}
     \end{align*}
@@ -2842,8 +2894,8 @@ in $[X_i, \FX_i]$ ist.
       \Rightarrow\prod_{i=1}^k P_{\xi_i}(A_i)&= \prod_{j=1}^k
       P(\xi_{ij}^{-1}(B_{ij}))= \prod_{j=1}^k P_{\xi_{ij}}(B_{ij})
     \end{align}
-    Aus den Gleichungen~(\ref{eq:5231}), (\ref{eq:5232}) und
-    (\ref{eq:5233}) folgt die Behauptung.
+    Aus den Gleichungen~(\autoref{eq:5231}), (\autoref{eq:5232}) und
+    (\autoref{eq:5233}) folgt die Behauptung.
   \end{itemize}
 \end{proof}
 
@@ -2863,7 +2915,7 @@ in $[X_i, \FX_i]$ ist.
   \varepsilon_n])= [\varepsilon_1, \ldots, \varepsilon_n]$ (identische
   Abbildung). Somit folgt, $P_{\overline{\xi}}=P=\times_{i=1}^n
   B_{1,p}= \times_{i=1}^n P_{\xi_i}$ und in Verbindung mit
-  Satz~\ref{satz:523} ergibt sich, dass die $\xi_1, \ldots, \xi_n$
+ \autoref{satz:523} ergibt sich, dass die $\xi_1, \ldots, \xi_n$
   unabhängig sind.
 \end{beispiel}
 
@@ -2923,14 +2975,14 @@ in $[X_i, \FX_i]$ ist.
 
 \begin{remark}
   $*$ ist kommutativ und assoziativ (siehe auch
-  Satz~\ref{satz:pchiadd-531}). Somit ist für $P_1, \ldots, P_n$:
+ \autoref{satz:pchiadd-531}). Somit ist für $P_1, \ldots, P_n$:
   \begin{align}
     \label{eq:5311}
     *_{i=1}^n P_i= (((P_1*P_2)*P_3)*\cdots*P_n)
   \end{align}
 \end{remark}
 
-\begin{satz}[Verallgemeinerung von Satz~\ref{satz:pchiadd-531}]
+\begin{satz}[Verallgemeinerung von \autoref{satz:pchiadd-531}]
 \label{satz:verallg-533}
   Seien $\xi_1, \ldots, \xi_n$ unabhängige Zufallsgrößen:
 \[\Rightarrow P_{\sum_{i=1}^n \xi_i}=*_{i=1}^n P_i\]
@@ -2938,15 +2990,15 @@ in $[X_i, \FX_i]$ ist.
 \begin{proof}
   Der Beweis erfolgt durch vollständige Induktion. Für $n=2$ ist die
   Behauptung richtig und wir nehmen an, dass die
-  Gleichung~(\ref{eq:5311}) für gewisse $n$ gilt. Dann ist zu zeigen,
+  Gleichung~(\autoref{eq:5311}) für gewisse $n$ gilt. Dann ist zu zeigen,
   dass, wenn $\xi_1, \ldots, \xi_i$ unabhängige Zufallsgrößen sind,
   folgt, $*_{i=1}^n P_i= (((P_1*P_2)*P_3)*\cdots*P_n)$. Seien $\xi_1,
   \ldots, \xi_n$ unabhängig und $[\xi_1, \ldots, \xi_n], \xi_{n+1}$
   unabhängig sowie $\sum_{i=1}^n \xi_i, \xi_{n+1}$ ebenfalls
   unabhängig\footnote{Der Beweis hierfür findet sich in der gängigen
     Lektüre zum Thema.}. Dann folgt, $P_{\sum_{i=1}^n \xi_i}=
-  *_{i=1}^n P_{\xi_i}$. Unter Anwendung des
-  Satzes~\ref{satz:pchiadd-531} ergibt sich, $P_{\sum_{i=1}^n
+  *_{i=1}^n P_{\xi_i}$. Unter Anwendung von
+  \autoref{satz:pchiadd-531} ergibt sich, $P_{\sum_{i=1}^n
     \xi_i+\xi_{i+1}}= *_{i=1}^n P_{\xi_i}*P_{\xi_{n+1}}\Rightarrow
   P_{\sum_{i=1}^{n+1}} = *_{i=1}^{n+1} P_{\xi_i}$
 \end{proof}
@@ -2956,7 +3008,7 @@ in $[X_i, \FX_i]$ ist.
   \[F_{\xi_1+\xi_2} (y)=\int F_{\xi_1}(x-y) P_{\xi_2}(dx)\]
 \end{satz}
 \begin{proof}
-  Wir wenden den Satz~\ref{satz:pchiadd-531} mit $B=(-\infty, y)$ an
+  Wir wenden den \autoref{satz:pchiadd-531} mit $B=(-\infty, y)$ an
   und haben:
   \begin{align*}
     F_{\xi_1+\xi_2} &= P_{\xi_1+x_2}((-\infty, y))=P_{\xi_1}*P_{\xi_2}
@@ -2978,7 +3030,7 @@ in $[X_i, \FX_i]$ ist.
   hierfür unangemessen hoch ist. Für streng mathematische Rechnungen
   sei der Leser an weitere Lektüre verwiesen.
 
-  Wegen des Satz~\ref{satz:verallg-533} ist $F_{\xi_1+\xi_2}(x)= \int
+  Wegen \autoref{satz:verallg-533} ist $F_{\xi_1+\xi_2}(x)= \int
   F_1(x-y) P_{\xi_2}(dy)$ und wegen $P_{\xi_2}=\ell f_2$ ergibt sich
   $\int F_1(x-y)f_2(y)\ell(dy)$\footnote{Der Sachverhalt wurde früher
     bewiesen.}. Man geht nun davon aus, dass die Funktion
@@ -3005,7 +3057,7 @@ in $[X_i, \FX_i]$ ist.
   a_{n-k} b_k$.
 \end{satz}
 \begin{proof}
-  Nach Satz~\ref{satz:pchiadd-531} wissen wir, dass $P_{\xi_1+\xi_2}
+  Nach \autoref{satz:pchiadd-531} wissen wir, dass $P_{\xi_1+\xi_2}
   (B)= \int P_{\xi_1}(B-x)P_{\xi_2}(dx)$ ist und wählen
   $B=\{n\}$. Somit erhalten wir nun, $P_{\xi_1+\xi_2} (\{n\})=\int
   P_{\xi_1} (\{n-x\})P_{\xi_2}(dx)=\sum_{k\in\Z} P_{\xi_1}(\{n-k\})
@@ -3015,7 +3067,7 @@ in $[X_i, \FX_i]$ ist.
 \begin{beispiel}
   Seien $\xi_1, \xi_2$ unabhängig und $P_{\xi_i}=B_{n_i,p}$ mit
   $i=1,2$. Zur Bestimmung von $P_{\xi_1+x_2}$ wäre es jetzt möglich,
-  Satz~\ref{satz:535} anzuwenden:
+  \autoref{satz:535} anzuwenden:
   \begin{align*}
     P_{\xi_1+\xi_2}(\{n\}) &= \sum_{k\in\Z} P_{\xi_1}(\{n-k\})
     P_{\xi_2}(\{k\})= \sum_{k\in\Z} B_{n_1,p}(\{n-k\})
@@ -3076,7 +3128,7 @@ und wir betrachten die Zufallsgrößen $\xi, \eta, \zeta$.
 \end{satz}
 \begin{proof}
   Zum Beweis kommt der Übertragungssatz
-  (Satz~\ref{satz:uebertrsatz-228}) zur Anwendung. Wir haben
+  (\autoref{satz:uebertrsatz-228}) zur Anwendung. Wir haben
   $[\Omega_1, \CF_1, \mu]:= \ofp, [\Omega_2,
   \CF_2]=[\R,\FB], h:[\Omega_1,\CF_1]\rightarrow [\Omega_2,\CF_2],
   f:[\Omega_2,\CF_2]\rightarrow [\R,\FB]$. Speziell sind $h=\xi$ und
@@ -3091,7 +3143,7 @@ und wir betrachten die Zufallsgrößen $\xi, \eta, \zeta$.
   \[E\xi= \sum_{k\in\Z} k P\xi(\{k\}) (=\sum_{k\in\Z} ka_k\]
 \end{satz}
 \begin{proof}
-  Aus Satz~\ref{satz:zgreew-41} folgt, $E\xi=\int xP_\xi(dx)=
+  Aus \autoref{satz:zgreew-41} folgt, $E\xi=\int xP_\xi(dx)=
   \sum_{k\in\Z} ka_k$.
 \end{proof}
 
@@ -3101,7 +3153,7 @@ und wir betrachten die Zufallsgrößen $\xi, \eta, \zeta$.
   \[E\xi=\int_{-\infty}^\infty x f(x) dx\]
 \end{satz}
 \begin{proof}
-  Aus Satz~\ref{satz:zgreew-41} folgt, $E\xi=\int x P_\xi(dx)= \int x
+  Aus \autoref{satz:zgreew-41} folgt, $E\xi=\int x P_\xi(dx)= \int x
   f(x) \ell dx= \int_{-\infty}^\infty xf(x)dx$.
 \end{proof}
 
@@ -3143,9 +3195,9 @@ Frage ist nur unter gewissen Beschränktheitsforderungen möglich.
     a_1\int \xi_1dP+ a_2\int \xi_2dP= a_1E\xi_1+a_2E\xi_2$
   \item $E\chi_A= \int\chi_A dP=P(A)$
   \item $P("`\xi=c``)=1\Rightarrow P_\xi=\delta_c$\\ %"'
-    Nach Satz~\ref{satz:zgreew-41} folgt nun $E\xi= \int x P_\xi(dx)
+    Nach \autoref{satz:zgreew-41} folgt nun $E\xi= \int x P_\xi(dx)
     =\int x \delta_c(dx)$ und letzteres ist ein Integral bei diskreten
-    Maßen. Damit ergibt sich nach Satz~\ref{satz:542}, dass die letzte
+    Maßen. Damit ergibt sich nach \autoref{satz:542}, dass die letzte
     Aussage gleich $\sum_{k\in\R} 1\cdot\delta_c(\{k\})=c$ ist. Im
     allgemeinen Fall gilt $\int f(x)\delta_c (dx)= f(x)$. %muss das
                                 %nicht eigentlich f(_c_) sein?
@@ -3336,12 +3388,17 @@ ist $H$ ein linearer Raum und $\lVert\cdot\rVert$ die Norm. Weiter
 seien $h\in H, G\subseteq H$.
 
 Wir betrachten den Spezialfall:
-\[H=\left\{f:[\Omega,\CF]\rightarrow [\R,\FB]| \lVert f\rVert= \sqrt{\int
-  f^2dP} <+\infty\right\}\]
+\begin{gather*}
+H\colon=\left\{f[\Omega,\CF]\rightarrow [\R,\FB]| \lVert f\rVert= \sqrt{\int
+  f^2dP} <+\infty\right\}
+\end{gather*}
+
 Dabei ist $f$ eine Zufallsgröße und $Ef$ ist endlich, denn es gilt,
 $\infty> Ef^2\geq (Ef)^2$. Damit ist auch $Df$ endlich und
 existiert. Weiter sei:
-\[G:=\{a:\Omega\rightarrow \R|\text{konstant}\}\]
+\begin{gather*}
+  G\colon=\{a\colon\Omega\rightarrow \R|\text{konstant}\}
+\end{gather*}
 und $\xi$ eine Zufallsgröße mit $E\xi^2<+\infty$. Es ist klar, dass
 $\lVert \xi-a\rVert=\sqrt{E(\xi-a)^2}$
 
@@ -3414,7 +3471,7 @@ Sei $\ofp$ ein Wahrscheinlichkeitsraum. Wir betrachten Zufallsgrößen
   \qquad \varepsilon> 0\]
 \end{satz}
 \begin{proof}
-  Zum Beweis wird der Satz~\ref{satz:markoff} für folgenden
+  Zum Beweis wird der \autoref{satz:markoff} für folgenden
   Spezialfall angewendet. Wir setzen $\xi:=(\eta-E\eta)^2\geq 0$ und
   $a:=\varepsilon^2$. Dann ist klar, dass $E\xi=D\eta$ gilt. Dann
   ergibt sich: $D\eta=E\xi\geq aP("`\xi\geq a``)= \varepsilon^2
@@ -3431,7 +3488,7 @@ Sei $\ofp$ ein Wahrscheinlichkeitsraum. Wir betrachten Zufallsgrößen
     \varepsilon > 0\]
 \end{satz}
 \begin{proof}
-  Für den Beweis wird Satz~\ref{satz:tscheby} angewendet und wir
+  Für den Beweis wird \autoref{satz:tscheby} angewendet und wir
   setzen: $\eta:=\frac{1}{n} \sum_{i=1}^n \xi_i$
   \begin{gather*}
     \Rightarrow E\eta = E\left(\nicefrac{1}{n}\sum_i \xi_i\right)=
@@ -3446,7 +3503,7 @@ Sei $\ofp$ ein Wahrscheinlichkeitsraum. Wir betrachten Zufallsgrößen
   \end{gather*}
 \end{proof}
 
-\paragraph{Anwendung von Satz~\ref{satz:563} auf Wette}
+\paragraph{Anwendung von \autoref{satz:563} auf Wette}
 
 \begin{itemize}
 \item $n=250$ Münzwürfe mt $\xi_1,\ldots,\xi_{250}$
@@ -3458,7 +3515,7 @@ Sei $\ofp$ ein Wahrscheinlichkeitsraum. Wir betrachten Zufallsgrößen
 \item $\lvert\sum_{i=1}^{250} \xi_i-125\rvert \geq 2=:A$ entspricht der
   Aussage, dass ich gewinne.
 \end{itemize}
-Aus Satz~\ref{satz:563} folgt nun: $P(A)=P("`\lvert \nicefrac{1}{n}
+Aus \autoref{satz:563} folgt nun: $P(A)=P("`\lvert \nicefrac{1}{n}
 \sum \xi_i-a\rvert\geq\varepsilon``)\leq %"'
 \frac{\sigma^2}{n\varepsilon^2}=
 \frac{\nicefrac{1}{4}}{250\cdot \nicefrac{1}{10}^2}= \frac{1}{10}$.
@@ -3500,7 +3557,7 @@ Folgende Ansprüche werden formuliert:
 \end{enumerate}
 
 Damit stellt sich das Problem, wie $n$ gewählt werden muss, so dass
-die Gleichung (\ref{eq:1}) gilt. Eine mögliche Antwort isT:
+die Gleichung (\autoref{eq:1}) gilt. Eine mögliche Antwort isT:
 \begin{align}
   \label{eq:2}
   n\geq\frac{\sigma^2}{(1-s)\varepsilon^2}
@@ -3513,24 +3570,24 @@ die Gleichung (\ref{eq:1}) gilt. Eine mögliche Antwort isT:
     erforderlich. Denn aus großem $s$ und kleinem $\varepsilon$ folgt
     ein großes $n$.
   \item Bei Informationen über den Typ $P_\xi$ kann man bessere
-    Grundlagen für die Ermittlung des $n$ als Satz~\ref{satz:563}
+    Grundlagen für die Ermittlung des $n$ als \autoref{satz:563}
     erhalten. (siehe Vorlesung Stochastik).
   \end{enumerate}
 \end{remark}
 
 \begin{proof}
-  Es folgt ein Beweis dafür, dass aus Gleichung~(\ref{eq:2}) die
-  Gleichung~(\ref{eq:1}) folgt. Aus dem Satz~\ref{satz:563} folgt,
+  Es folgt ein Beweis dafür, dass aus Gleichung~(\autoref{eq:2}) die
+  Gleichung~(\autoref{eq:1}) folgt. Aus dem \autoref{satz:563} folgt,
   $P("`\lvert \eta_n-a\rvert <\varepsilon``)=1- P("`\lvert
   \underbrace{\eta_n}_{\nicefrac{1}{n} \sum\xi_i} -a\rvert\geq
   \varepsilon``)$. %"'
-  Nunmehr sich hier wieder Satz~\ref{satz:563}
+  Nunmehr sich hier wieder \autoref{satz:563}
   anwenden und die obige Gleichung ist größergleich
   $1-\frac{\sigma^2}{n\varepsilon^2}\geq
-  s$. d.\,h. Gleichung~(\ref{eq:1}) wird realisiert, wenn $s\leq 1-
+  s$. d.\,h. Gleichung~(\autoref{eq:1}) wird realisiert, wenn $s\leq 1-
   \frac{\sigma^2}{n\varepsilon^2}\Leftrightarrow n\geq
   \frac{\sigma^2}{(1-s)\varepsilon^2}$. Letzteres entspricht gerade
-  Gleichung~(\ref{eq:2}).
+  Gleichung~(\autoref{eq:2}).
 \end{proof}
 
 \section{Konvergenzarten und das Gesetz der großen Zahlen}
@@ -3554,7 +3611,7 @@ Zufallsgrößen oder -variablen über diesem Wahrscheinlichkeitsraum.
   \[\frac{1}{n} \sum_{i=1}^n \xi_i\xrightarrow{P} a\]
 \end{satz}
 \begin{proof}
-  Aus Satz~\ref{satz:563} folgt: %%Beweis unklar
+  Aus \autoref{satz:563} folgt: %%Beweis unklar
 \end{proof}
 
 \paragraph{Bezug zu relativen Häufigkeiten (Spezialfall)}
@@ -3568,10 +3625,10 @@ messbar, da $A\in\FX$ und die Summe über alle $\xi_i$ entspricht der
 Anzahl, wie oft $A$ bei $1,\ldots,n$ realisiert wird,
 d.\,h. $\nicefrac{1}{n} \sum_{i=1}^n \xi_i$ ist die relative Häufigkeit
 des Eintretens von $A$. Es ist klar, dass $(\xi_i)$ iid sind und aus
-Satz~\ref{satz:schwachges-571} ergibt sich $\nicefrac{1}{n} \sum \xi_i
+\autoref{satz:schwachges-571} ergibt sich $\nicefrac{1}{n} \sum \xi_i
 \xrightarrow{P} P_{\eta_1}(A)$. Dies ist eine rein qualitative Aussage
 und macht keine Angabe über die Konvergenzgeschwindigkeit. Durch die
-Anwendung von Satz~\ref{satz:563} kann nun folgender Schluss gezogen
+Anwendung von \autoref{satz:563} kann nun folgender Schluss gezogen
 werden: $P("`lvert \nicefrac{1}{n}\sum\xi_i-P_{\eta_1}(A)\rvert\geq
 \varepsilon``)\leq
 \frac{P_{\eta_1}(A)(1-P_{\eta_1}(A))}{n\varepsilon^2} \leq
